Running on Java 17